--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -21,3 +21,18 @@ slorber:
     linkedin: sebastienlorber
     github: slorber
     newsletter: https://thisweekinreact.com
+
+
+alexchen:
+  name: Alex Chen
+  title: The main character of the story
+  url: https://vienna.bio
+  image_url: https://github.com/viennadd.png
+  page: false
+    # customize the url of the author page at /blog/authors/<permalink>
+    # permalink: '/all-sebastien-lorber-articles'
+  socials:
+    x: viennadd
+    linkedin: alex-dd
+    github: viennadd
+    # newsletter: https://thisweekinreact.com
